--- a/content/book/9/9.2.md
+++ b/content/book/9/9.2.md
@@ -484,9 +484,9 @@ void main(){
 my_printf("char=%c int=%d double=%f char[]=%s",'f',44,5.5,"qwerty"); }
 ```
 
-## Лабораторному практикум
+## Лабораторный практикум
 
-Упаковка переменных различного типа в заданном формате
+## Упаковка переменных различного типа в заданном формате
 
 Разработать две функции, одна из которых вводит с клавиатуры набор данных в произвольной последовательности и размещает в памяти в заданном формате. Другая функция читает  эти  данные  и выводит на экран. Программа запрашивает и размещает в памяти несколько наборов данных при помощи первой функции, а затем читает их и выводит на экран при помощи второй. Размещение данных производить в выделенном массиве байтов с  контролем  его переполнения.
 
