feat(content): fix Smile

--- a/content/book/2/2.1.md
+++ b/content/book/2/2.1.md
@@ -188,7 +188,7 @@ for (s=«первый объект»,«цикл по множеству объе
 необходимо знание некоторого минимума «расхожих фраз» - общеупотребительных
 программных контекстов.
 
-&nbsp;<YinAndYang/> Наличие «джентльменского набора расхожих фраз», находящихся выше конструкций языка
+&nbsp;<Icon name="YinAndYang"/> Наличие «джентльменского набора расхожих фраз», находящихся выше конструкций языка
 программирования, показывает, что языки программирования на самом деле не
 совсем удобны для программирования как такового. На практике программисты
 многократно дублируют одни и те же алгоритмы в разных структурах данных, языках
